# log_parser

./: .gitignore  CHANGES.txt  README.md  buildout.cfg  pyproject.toml  setup.py  versions.cfg
config/: base.ini
docs/: data_dictionary.md  grep.sh  modsec_audit.txt  test_report.csv
ott/log_parser/: utils.py
ott/log_parser/control/: load_post_processor.py  loader.py  parser.py  parser_modsec.py  publisher.py  reporter.py  stats.py
ott/log_parser/db/: __init__.py  base.py  database.py  processed_requests.py  raw_log.py
ott/log_parser/view/: csv.py
scripts/: all-stats.sh  base.sh  cp_logs.sh  docker_dot_source_me.sh  find-stats.sh  grab_logs.sh  ls_logs.sh  process.sh  process_old_logs.sh  re-process.sh
scripts/db/: base.sh
